syntax = "proto3";

package balance; 

// Requests
message NewBalanceRequest {
  string currencySymbol = 1;
  double currencyBalance = 2;
}

// Responses
message Balance {
  string balanceID = 1;
  string userID = 2;
  string accountID = 3;
  string currencySymbol = 4;
  double available = 5;
  double locked = 6;
  double exchangeTotal = 7;
  double exchangeAvailable = 8;
  double exchangeLocked = 9; 
  string created_on = 10;
  string updated_on = 11;
}